--- a/ACT_4/pom.xml
+++ b/ACT_4/pom.xml
@@ -3,4 +3,23 @@
   <groupId>es.edix.dam</groupId>
   <artifactId>ACT_4</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+	</properties>
+	
+	<dependencies>
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
+		    <version>2.3.1</version>
+		    <scope>runtime</scope>
+		</dependency>
+	</dependencies>
 </project>
